--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,31 +1,16 @@
-body{
+body {
   width: 100vw;
   height: 100vh;
   background-color: rgb(214, 214, 214);
+  overflow-x: hidden;
 }
+
 .App {
   width: 100%;
   height: 100%;
   display: flex;
+  margin: 0 2rem;
   flex-flow: row wrap;
   justify-content: space-around;
   align-items: center;
 }
-.cardGenre{
-  margin-top: 1rem;
-  padding: .5rem;
-  width: 40%;
-  height: 18rem;
-  text-align: center;
-  display: flex;
-  flex-flow: column;
-  justify-content: space-around;
-  align-items: center;
-  background-color: white;
-}
-
-
-img{
-  width: 30%;
-}
-
